server: integrate traces
